--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
+
 plugins {
     id 'com.android.application'
 }
 
 android {
     compileSdkVersion 32
-    buildToolsVersion "30.0.2"
+    buildToolsVersion "32.0.0"
 
     defaultConfig {
         applicationId "com.hfad.nothing"
@@ -30,14 +31,14 @@ android {
 }
 
 dependencies {
-
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     implementation 'androidx.room:room-runtime:2.4.1'
     annotationProcessor 'androidx.room:room-compiler:2.4.1'
+    androidTestImplementation 'androidx.room:room-testing:2.4.1'
 }
